Update Client
