# routes/api.php
@@ -17,9 +17,7 @@ Route::post('/client/create', [ClientController::class, 'store']);
 
 Route::post('/client/search_cpf', [ClientController::class, 'searchByCpf']);
 
-Route::post('/client/update', function () {
-    return "Atualizar o cliente";
-});
+Route::post('/client/update', [ClientController::class, 'update']);
 
 Route::post('/client/delete', function () {
     return "Deletar o cliente";
